# training-trackbot

./: .gitignore  .pre-commit-config.yaml  Makefile  docker-compose.yml  example.env  main.py  pyproject.toml
backend/: docker-compose.backend.dev.yml
backend/_project/: celery.py  routes.py  settings.py  urls.py
backend/apps/accounts/: admin.py  apps.py  constants.py
backend/apps/accounts/api/: serializers.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_bodymetrics_biceps_cm_bodymetrics_calf_cm_and_more.py  0003_alter_bodymetrics_user.py  0004_alter_bodymetrics_weight_kg.py  0005_alter_bodymetrics_options_and_more.py
backend/apps/accounts/models/: __init__.py  metrics.py  users.py
backend/apps/core/: apps.py  constants.py  permissions.py  throttling.py
backend/apps/core/models/: __init__.py
backend/apps/trainings/: admin.py  apps.py
backend/apps/trainings/api/: urls.py
backend/apps/trainings/migrations/: 0001_initial.py  (+4 more)
backend/docker/dev/: Dockerfile.backend.dev  cmd_start_web.sh  entrypoint.sh
bot/: docker-compose.bot.dev.yml
bot/app/: main.py  settings.py
bot/app/api/: client.py  exceptions.py
bot/app/callbacks/: body_metrics.py  prefixes.py
bot/app/conversations/: states.py
bot/app/formatters/: body_metrics.py  sets.py  workouts.py
bot/app/handlers/: body_metrics.py  exercises.py  menu.py  sets.py  start.py  workouts.py
bot/app/keyboards/: body_metrics.py  common.py  exercises.py  sets.py  workouts.py
bot/app/services/: body_metrics_pagination.py  body_metrics_steps.py
bot/docker/: Dockerfile.dev
(+13 files in other folders)
